Fixed visual bugs and changed text colour in SM to make it more visible

--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@ html {
     scrollbar-width: none; /* for Firefox */
     overflow-y: scroll;
     overflow-x: hidden;
-    font-family:  'Poppins', sans-serif;
+    font-family:  sans-serif;
     user-select: none
 ;
 }
